--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -42,7 +42,7 @@
               to My
               <span class="relative inline-block">
                 Homepage
-                <div class="w-full h-3 -mt-3 bg-orange-600"></div>
+                <div class="w-full h-3 -mt-3 bg-yellow-500"></div>
               </span>
             </h2>
             <p class="mb-6 text-base font-thin tracking-wide text-gray-100 md:text-2xl">
