added new style to html doc

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -29,6 +29,9 @@
     </style>
 </head>
 <body>
+
+  <!-- Start of Hero -->
+
     <div class="relative bg-[#5b92e5]">
         <div class="absolute inset-x-0 bottom-0">
           <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-white" preserveAspectRatio="none">
@@ -63,6 +66,23 @@
           </div>
         </div>
     </div>
+
+    <!-- End of Hero -->
+
+    <!-- STart of Navbar -->
+
+    <nav>
+      <img src="logo.svg" />
+      <div>
+        <a href="#"> Home </a>
+        <a href="#"> About </a>
+        <a href="#"> Services </a>
+        <a href="#"> Quotes </a>
+      </div>
+    </nav>
+
+    <!-- End of Navbar -->
+
 </body>
 <script src="/scripts/main.js"></script>
 
