--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -32,14 +32,14 @@
 
   <!-- Start of Hero -->
 
-    <div class="relative bg-[#5b92e5]">
+    <div class="relative bg-[#5b92e5] pt-12">
         <div class="absolute inset-x-0 bottom-0">
           <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-white" preserveAspectRatio="none">
             <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
           </svg>
         </div>
         <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
-          <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl sm:text-center">
+          <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl text-center">
             <h2 class="mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
               Welcome <br class="block md:hidden" />
               to My
@@ -57,7 +57,7 @@
             <a
               href="/"
               aria-label="Scroll down"
-              class="flex items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-110"
+              class="flex items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-150"
             >
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
                 <path d="M10.293,3.293,6,7.586,1.707,3.293A1,1,0,0,0,.293,4.707l5,5a1,1,0,0,0,1.414,0l5-5a1,1,0,1,0-1.414-1.414Z"></path>
@@ -71,13 +71,12 @@
 
     <!-- STart of Navbar -->
 
-    <nav>
-      <img src="logo.svg" />
-      <div>
-        <a href="#"> Home </a>
-        <a href="#"> About </a>
-        <a href="#"> Services </a>
-        <a href="#"> Quotes </a>
+    <nav class="fixed z-10 top-0 left-0 w-full h-[60px] flex align-middle justify-between py-3 bg-transparent shadow-md">
+      <div class="text-gray-100">
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Home </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Profile </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Hometown </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Tourist </a>
       </div>
     </nav>
 
