added first img asset + Main Parallax Section (unstyled)

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -82,6 +82,18 @@
 
     <!-- End of Navbar -->
 
+    <!-- Start of Main Parallax Section -->
+
+    <section class="flex flex-row justify-center align-middle h-screen py-20 text-left gap-[30px]">
+      <div>
+        <h2> Take a Peek </h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+      </div>
+      <img src="1.svg" />
+    </section>
+
+    <!-- End of Main Parallax Section -->
+
 </body>
 <script src="/scripts/main.js"></script>
 
