implemented asset 1: space-discovery to Main Parallax Section

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -89,7 +89,7 @@
         <h2> Take a Peek </h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
       </div>
-      <img src="1.svg" />
+      <img src="/assets/images/space-discovery.png" class="w-[100px] h-[100px]" />
     </section>
 
     <!-- End of Main Parallax Section -->
