added third asset: error-mitigation + fixed Main Parallax Section

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -32,7 +32,7 @@
 
   <!-- Start of Hero -->
 
-    <div class="relative bg-[#5b92e5] pt-12">
+    <div class="relative z-5 bg-[#5b92e5] pt-12">
         <div class="absolute inset-x-0 bottom-0">
           <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-white" preserveAspectRatio="none">
             <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
@@ -69,9 +69,9 @@
 
     <!-- End of Hero -->
 
-    <!-- STart of Navbar -->
+    <!-- Start of Navbar -->
 
-    <nav class="fixed z-10 top-0 left-0 w-full h-[60px] flex align-middle justify-between py-3 bg-transparent shadow-md">
+    <nav class="fixed z-10 top-0 left-0 w-full h-[60px] flex align-middle justify-between py-3 bg-[#5b92e5] shadow-md">
       <div class="text-gray-100">
         <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Home </a>
         <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Profile </a>
@@ -84,12 +84,12 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="flex flex-row justify-center align-middle h-screen py-20 text-left gap-[30px]">
-      <div>
-        <h2> Take a Peek </h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <section class="banner relative z-1 flex flex-row justify-center align-middle h-screen p-20 sm:py-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff]">
+      <div class="text-gray-800">
+        <h2 class="text-3xl font-bold"> Take a Peek </h2>
+        <p class="py-4 font-thin"> I am a frontend developer following the JAMStack route. </p>
       </div>
-      <img src="/assets/images/space-discovery.png" class="w-[100px] h-[100px]" />
+      <img src="/assets/images/space-discovery.png" alt="space" class="w-[200px] h-[200px]" />
     </section>
 
     <!-- End of Main Parallax Section -->
