removed bg from all assets/images

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -89,7 +89,7 @@
         <h2 class="text-3xl font-bold"> Take a Peek </h2>
         <p class="py-4 font-thin"> I am a frontend developer following the JAMStack route. </p>
       </div>
-      <img src="/assets/images/space-discovery.png" alt="space" class="w-[200px] h-[200px]" />
+      <img src="../assets/images/space-discovery.png" alt="space" class="w-[200px] h-[200px]" />
     </section>
 
     <!-- End of Main Parallax Section -->
