styled Main Parallax Section; awaiting further styling

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -84,12 +84,12 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="banner relative z-1 flex flex-row justify-center align-middle h-screen p-20 sm:py-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff]">
+    <section class="banner max-w-full relative z-1 flex flex-col sm:flex-row justify-center align-middle items-center h-screen p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff]">
       <div class="text-gray-800">
         <h2 class="text-3xl font-bold"> Take a Peek </h2>
-        <p class="py-4 font-thin"> I am a frontend developer following the JAMStack route. </p>
+        <p class="pt-4 font-thin"> I am a frontend developer following the JAMStack route. </p>
       </div>
-      <img src="../assets/images/space-discovery.png" alt="space" class="w-[200px] h-[200px]" />
+      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-full h-full sm:w-[500px] sm:h-[500px]" />
     </section>
 
     <!-- End of Main Parallax Section -->
