--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -84,10 +84,14 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="banner max-w-full relative z-1 flex flex-col sm:flex-row justify-center align-middle items-center h-screen p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff]">
-      <div class="text-gray-800">
+    <section class="banner max-w-full relative z-1 flex flex-col sm:flex-row justify-center align-middle items-center h-screen sm:h-36 p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff] mt-14">
+      <div class="text-gray-900">
         <h2 class="text-3xl font-bold"> Take a Peek </h2>
-        <p class="pt-4 font-thin"> I am a frontend developer following the JAMStack route. </p>
+        <p class="pt-4 font-thin">
+          I am a frontend developer following the JAMStack route. 
+          <br /><br />
+          I work with NEXT.js, Tailwind, GraphQL, and Flutter.
+        </p>
       </div>
       <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-full h-full sm:w-[500px] sm:h-[500px]" />
     </section>
