--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Q-1 | 5025201159 </title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -84,7 +84,7 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="banner max-w-full relative z-1 flex flex-col sm:flex-row justify-center align-middle items-center h-screen sm:h-36 p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff] mt-14">
+    <section class="banner max-w-full relative z-1 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff] mt-14">
       <div class="text-gray-900">
         <h2 class="text-3xl font-bold"> Take a Peek </h2>
         <p class="pt-4 font-thin">
@@ -93,20 +93,48 @@
           I work with NEXT.js, Tailwind, GraphQL, and Flutter.
         </p>
       </div>
-      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-full h-full sm:w-[500px] sm:h-[500px]" />
+      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-full h-full sm:w-[600px] sm:h-[600px]" />
     </section>
 
     <!-- End of Main Parallax Section -->
 
-</body>
-<script src="/scripts/main.js"></script>
+    <!-- Start of Parallax Panels -->
 
+    <div class="container w-[200%] h-screen flex flex-nowrap bg-[#f7f7f7]">
+      <section class="description panel blue w-full h-full">
+        <img src="../assets/images/error-mitigation-transformed.png" class="w-[400px] h-[400px] object-contain" />
+        <h2 class="text-3xl font-bold"> Spotify Clone </h2>
+        <p class="pt-4 font-thin">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
+          eius cum perferendis consectetur culpa laboriosam quam, sed ea nihil,
+          suscipit, quidem est expedita. Nihil enim obcaecati deleniti eaque
+          sed.
+        </p>
+      </section>
+      <section class="panel red w-full h-full">
+        <img src="../assets/images/tightbeam-transformed.png" class="w-[200px] h-[200px] md:w-[400px] md:h-[400px] object-contain" />
+        <h2 class="text-3xl font-bold"> Broaden Creative </h2>
+        <p class="pt-4 font-thin">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
+          eius cum perferendis consectetur culpa laboriosam quam, sed ea nihil,
+          suscipit, quidem est expedita. Nihil enim obcaecati deleniti eaque
+          sed.
+        </p>
+      </section>
+    </div>
+
+    <!-- End fof Parallax Panels -->
+
+</body>
+<script src="../scripts/main.js"></script>
+    
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
   integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
+
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"
   integrity="sha512-A64Nik4Ql7/W/PJk2RNOmVyC/Chobn5TY08CiKEX50Sdw+33WTOpPJ/63bfWPl0hxiRv1trPs5prKO8CpA7VNQ=="
