added footer; need fixing and styling

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -102,7 +102,7 @@
 
     <div class="container w-[200%] h-screen flex flex-nowrap bg-[#f7f7f7]">
       <section class="description panel blue w-full h-full">
-        <img src="../assets/images/error-mitigation-transformed.png" class="w-[400px] h-[400px] object-contain" />
+        <img src="../assets/images/error-mitigation-transformed.png" class="w-[200px] h-[200px] md:w-[400px] md:h-[400px] object-contain" />
         <h2 class="text-3xl font-bold"> Spotify Clone </h2>
         <p class="pt-4 font-thin">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
@@ -124,6 +124,20 @@
     </div>
 
     <!-- End fof Parallax Panels -->
+
+    <!-- Start of Footer -->
+
+    <section class="footer">
+      <img src="../assets/images/web-dev-transformed.png" />
+      <h2> Get A Quote </h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
+        eius cum perferendis consectetur culpa laboriosam quam, sed ea nihil,
+        suscipit, quidem est expedita. Nihil enim obcaecati deleniti eaque sed.
+      </p>
+    </section>
+
+    <!-- End of Footer -->
 
 </body>
 <script src="../scripts/main.js"></script>
