--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -32,9 +32,9 @@
 
   <!-- Start of Hero -->
 
-    <div class="relative z-5 bg-[#5b92e5] pt-12">
+    <div class="relative z-20 bg-[#5b92e5] pt-12">
         <div class="absolute inset-x-0 bottom-0">
-          <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-white" preserveAspectRatio="none">
+          <svg viewBox="0 0 224 12" fill="#f1f1f1" class="w-full -mb-1 text-white" preserveAspectRatio="none">
             <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
           </svg>
         </div>
@@ -71,8 +71,8 @@
 
     <!-- Start of Navbar -->
 
-    <nav class="fixed z-10 top-0 left-0 w-full h-[60px] flex align-middle justify-between py-3 bg-[#5b92e5] shadow-md">
-      <div class="text-gray-100">
+    <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
+      <div class="text-gray-100 font-semibold md:space-x-16">
         <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Home </a>
         <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Profile </a>
         <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Hometown </a>
@@ -84,60 +84,30 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="banner max-w-full relative z-1 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 bg-[#ccb7ff] mt-14">
-      <div class="text-gray-900">
-        <h2 class="text-3xl font-bold"> Take a Peek </h2>
-        <p class="pt-4 font-thin">
+    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 mt-14">
+      <div class="text-gray-900 sm:pb-32">
+        <h2 class="font-bold text-4xl"> About Me </h2>
+        <p class="pt-4 font-thin text-xl">
           I am a frontend developer following the JAMStack route. 
           <br /><br />
           I work with NEXT.js, Tailwind, GraphQL, and Flutter.
         </p>
       </div>
-      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-full h-full sm:w-[600px] sm:h-[600px]" />
+      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-[600px] h-[600px]" />
     </section>
+    <section class="pt-40 pb-32 relative">
+        <div class="absolute w-full h-full top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(https://d1pnnwteuly8z3.cloudfront.net/images/dafc1e05-b0e8-4c6d-b375-4a62333bbd5a/71fe09e2-9320-4f61-8eca-067243e2ef68.jpeg)">
+          <div class="absolute w-full h-full top-0 left-0 bg-blue-600/30"></div>
+        </div>
+        <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
+          I come from
+          <br class="sm:hidden" />
+          <span class="text-yellow-400 font-semibold text-6xl"> Bekasi </span>
+        </h1>
+    </section>
+    <section class="h-[500px]"></section>
 
     <!-- End of Main Parallax Section -->
-
-    <!-- Start of Parallax Panels -->
-
-    <div class="container w-[200%] h-screen flex flex-nowrap bg-[#f7f7f7]">
-      <section class="description panel blue w-full h-full">
-        <img src="../assets/images/error-mitigation-transformed.png" class="w-[200px] h-[200px] md:w-[400px] md:h-[400px] object-contain" />
-        <h2 class="text-3xl font-bold"> Spotify Clone </h2>
-        <p class="pt-4 font-thin">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
-          eius cum perferendis consectetur culpa laboriosam quam, sed ea nihil,
-          suscipit, quidem est expedita. Nihil enim obcaecati deleniti eaque
-          sed.
-        </p>
-      </section>
-      <section class="panel red w-full h-full">
-        <img src="../assets/images/tightbeam-transformed.png" class="w-[200px] h-[200px] md:w-[400px] md:h-[400px] object-contain" />
-        <h2 class="text-3xl font-bold"> Broaden Creative </h2>
-        <p class="pt-4 font-thin">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
-          eius cum perferendis consectetur culpa laboriosam quam, sed ea nihil,
-          suscipit, quidem est expedita. Nihil enim obcaecati deleniti eaque
-          sed.
-        </p>
-      </section>
-    </div>
-
-    <!-- End fof Parallax Panels -->
-
-    <!-- Start of Footer -->
-
-    <section class="footer">
-      <img src="../assets/images/web-dev-transformed.png" />
-      <h2> Get A Quote </h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi labore
-        eius cum perferendis consectetur culpa laboriosam quam, sed ea nihil,
-        suscipit, quidem est expedita. Nihil enim obcaecati deleniti eaque sed.
-      </p>
-    </section>
-
-    <!-- End of Footer -->
 
 </body>
 <script src="../scripts/main.js"></script>
