changed parallax bg

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -96,7 +96,7 @@
       <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-[600px] h-[600px]" />
     </section>
     <section class="pt-40 pb-32 relative">
-        <div class="absolute w-full h-full top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(https://d1pnnwteuly8z3.cloudfront.net/images/dafc1e05-b0e8-4c6d-b375-4a62333bbd5a/71fe09e2-9320-4f61-8eca-067243e2ef68.jpeg)">
+        <div class="absolute w-full h-full top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(../assets/images/summarecon-bekasi.jpg)">
           <div class="absolute w-full h-full top-0 left-0 bg-blue-600/30"></div>
         </div>
         <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
