cleaned up some stuff, added fonts

--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -88,24 +88,25 @@
       <div class="text-gray-900 sm:pb-32">
         <h2 class="font-bold text-4xl"> About Me </h2>
         <p class="pt-4 font-thin text-xl">
-          I am a frontend developer following the JAMStack route. 
-          <br /><br />
+          I am a frontend developer following the JAMStack route, with a newfound passion for UI/UX gamification and native apps.
+          <br />
+          <br />
           I work with NEXT.js, Tailwind, GraphQL, and Flutter.
         </p>
       </div>
       <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-[600px] h-[600px]" />
     </section>
     <section class="pt-40 pb-32 relative">
-        <div class="absolute w-full h-full top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(../assets/images/summarecon-bekasi.jpg)">
-          <div class="absolute w-full h-full top-0 left-0 bg-blue-600/30"></div>
+        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(../assets/images/summarecon-bekasi.jpg)">
+          <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
         <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
-          I come from
+          My Hometown :
           <br class="sm:hidden" />
           <span class="text-yellow-400 font-semibold text-6xl"> Bekasi </span>
         </h1>
     </section>
-    <section class="h-[500px]"></section>
+    <section class="w-full h-[250px]"></section>
 
     <!-- End of Main Parallax Section -->
 
