--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -101,9 +101,9 @@
           <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
         <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
-          My Hometown ~
+          My Hometown
           <br class="sm:hidden" />
-          <span class="text-yellow-400 font-semibold text-6xl"> Bekasi </span>
+          <span class="text-yellow-400 font-semibold text-6xl"> ~ Bekasi </span>
         </h1>
     </section>
     <section class="w-full h-[250px]"></section>
