--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -1,1 +1,130 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Q-1 | 5025201159 </title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                unn: '#5b92e5',
+                mcrn: '#6A180F',
+              }
+            }
+          }
+        }
+    </script>
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .content-auto {
+                content-visibility: auto;
+            }
+        }
+    </style>
+</head>
+<body>
+
+  <!-- Start of Hero -->
+
+    <div class="relative z-20 bg-[#5b92e5] pt-12">
+        <div class="absolute inset-x-0 bottom-0">
+          <svg viewBox="0 0 224 12" fill="#f1f1f1" class="w-full -mb-1 text-white" preserveAspectRatio="none">
+            <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
+          </svg>
+        </div>
+        <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+          <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl text-center">
+            <h2 class="mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
+              Welcome <br class="block md:hidden" />
+              to My
+              <span class="relative inline-block">
+                Homepage
+                <div class="w-full h-3 -mt-3 bg-yellow-500"></div>
+              </span>
+            </h2>
+            <p class="mb-6 text-base font-thin tracking-wide text-gray-100 md:text-2xl">
+              Mohammed Fachry Dwi Handoko
+            </p>
+            <p class="max-w-md mb-10 text-xs font-thin tracking-wide text-gray-100 sm:text-sm sm:mx-auto md:mb-16">
+              Department of Informatics <span class="px-2"> | </span> 2020 ~ 5025201159
+            </p>
+            <a
+              href="/"
+              aria-label="Scroll down"
+              class="flex items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-150"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
+                <path d="M10.293,3.293,6,7.586,1.707,3.293A1,1,0,0,0,.293,4.707l5,5a1,1,0,0,0,1.414,0l5-5a1,1,0,1,0-1.414-1.414Z"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+    </div>
+
+    <!-- End of Hero -->
+
+    <!-- Start of Navbar -->
+
+    <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
+      <div class="text-gray-100 font-thin md:space-x-16">
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Home </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Profile </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 font-bold text-yellow-600" href="/hometown.html"> Hometown </a>
+        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Tourist </a>
+      </div>
+    </nav>
+
+    <!-- End of Navbar -->
+
+    <!-- Start of Main Parallax Section -->
+
+    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 mt-14">
+      <div class="text-gray-900 sm:pb-32">
+        <h2 class="font-bold text-4xl"> Take A Peek </h2>
+        <p class="pt-4 font-thin text-lg">
+          I am a frontend developer following the JAMStack route, with a newfound passion for UI/UX gamification and native apps.
+          <br />
+          <br />
+          But I've lived in Germany. Saudi Arabia, and Malaysia my whole life.
+        </p>
+      </div>
+      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-[600px] h-[600px]" />
+    </section>
+    <section class="pt-40 pb-32 relative">
+        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(../assets/images/summarecon-bekasi.jpg)">
+          <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
+        </div>
+        <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
+          My Hometown
+          <br class="sm:hidden" />
+          <span class="text-yellow-400 font-semibold text-6xl"> ~ Bekasi </span>
+        </h1>
+    </section>
+    <section class="max-w-full h-[250px]">
+    </section>
+
+    <!-- End of Main Parallax Section -->
+
+</body>
+<script src="../scripts/main.js"></script>
+    
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+  integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
+
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"
+  integrity="sha512-A64Nik4Ql7/W/PJk2RNOmVyC/Chobn5TY08CiKEX50Sdw+33WTOpPJ/63bfWPl0hxiRv1trPs5prKO8CpA7VNQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
+</html>
