--- a/web-programming/quiz-1/quiz1/html/index.html
+++ b/web-programming/quiz-1/quiz1/html/index.html
@@ -30,85 +30,39 @@
 </head>
 <body>
 
-  <!-- Start of Hero -->
+  <!-- Start of Login -->
 
-    <div class="relative z-20 bg-[#5b92e5] pt-12">
-        <div class="absolute inset-x-0 bottom-0">
-          <svg viewBox="0 0 224 12" fill="#f1f1f1" class="w-full -mb-1 text-white" preserveAspectRatio="none">
-            <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
-          </svg>
+    <div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center sm:py-12">
+      <div class="relative py-3 sm:max-w-xl sm:mx-auto">
+        <div
+          class="absolute inset-0 bg-gradient-to-r from-blue-300 to-blue-600 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
         </div>
-        <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
-          <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl text-center">
-            <h2 class="mb-6 font-sans text-3xl font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
-              Welcome <br class="block md:hidden" />
-              to My
-              <span class="relative inline-block">
-                Homepage
-                <div class="w-full h-3 -mt-3 bg-yellow-500"></div>
-              </span>
-            </h2>
-            <p class="mb-6 text-base font-thin tracking-wide text-gray-100 md:text-2xl">
-              Mohammed Fachry Dwi Handoko
-            </p>
-            <p class="max-w-md mb-10 text-xs font-thin tracking-wide text-gray-100 sm:text-sm sm:mx-auto md:mb-16">
-              Department of Informatics <span class="px-2"> | </span> 2020 ~ 5025201159
-            </p>
-            <a
-              href="/"
-              aria-label="Scroll down"
-              class="flex items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-150"
-            >
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                <path d="M10.293,3.293,6,7.586,1.707,3.293A1,1,0,0,0,.293,4.707l5,5a1,1,0,0,0,1.414,0l5-5a1,1,0,1,0-1.414-1.414Z"></path>
-              </svg>
-            </a>
+        <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
+          <div class="max-w-md mx-auto">
+            <div>
+              <h1 class="text-2xl font-semibold"> Login Form with Floating Labels </h1>
+            </div>
+            <div class="divide-y divide-gray-200">
+              <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
+                <div class="relative">
+                  <input autocomplete="off" id="email" name="email" type="text" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" placeholder="Email address" />
+                  <label for="email" class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Email Address</label>
+                </div>
+                <div class="relative">
+                  <input autocomplete="off" id="password" name="password" type="password" class="peer placeholder-transparent h-10 w-full border-b-2 border-gray-300 text-gray-900 focus:outline-none focus:borer-rose-600" placeholder="Password" />
+                  <label for="password" class="absolute left-0 -top-3.5 text-gray-600 text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-440 peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-gray-600 peer-focus:text-sm">Password</label>
+                </div>
+                <div class="relative">
+                  <button class="bg-blue-500 text-white rounded-md px-2 py-1">Submit</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
     </div>
 
-    <!-- End of Hero -->
-
-    <!-- Start of Navbar -->
-
-    <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
-      <div class="text-gray-100 font-semibold md:space-x-16">
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Home </a>
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Profile </a>
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Hometown </a>
-        <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="#"> Tourist </a>
-      </div>
-    </nav>
-
-    <!-- End of Navbar -->
-
-    <!-- Start of Main Parallax Section -->
-
-    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] sm:gap-14 mt-14">
-      <div class="text-gray-900 sm:pb-32">
-        <h2 class="font-bold text-4xl"> About Me </h2>
-        <p class="pt-4 font-thin text-xl">
-          I am a frontend developer following the JAMStack route, with a newfound passion for UI/UX gamification and native apps.
-          <br />
-          <br />
-          I work with NEXT.js, Tailwind, GraphQL, and Flutter.
-        </p>
-      </div>
-      <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-[600px] h-[600px]" />
-    </section>
-    <section class="pt-40 pb-32 relative">
-        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed" style="background-image:url(../assets/images/summarecon-bekasi.jpg)">
-          <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
-        </div>
-        <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
-          My Hometown
-          <br class="sm:hidden" />
-          <span class="text-yellow-400 font-semibold text-6xl"> ~ Bekasi </span>
-        </h1>
-    </section>
-    <section class="w-full h-[250px]"></section>
-
-    <!-- End of Main Parallax Section -->
+  <!-- End of Login -->
 
 </body>
 <script src="../scripts/main.js"></script>
