downloaded new asset img

--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -88,10 +88,10 @@
       <div class="text-gray-900 sm:pb-32">
         <h2 class="font-bold text-4xl"> Take A Peek </h2>
         <p class="pt-4 font-thin text-lg">
-          I am a frontend developer following the JAMStack route, with a newfound passion for UI/UX gamification and native apps.
+          Born in Jakarta, lived outside my whole life as an expatriate.
           <br />
           <br />
-          But I've lived in Germany. Saudi Arabia, and Malaysia my whole life.
+          Germany. Saudi Arabia, and Malaysia my whole life.
         </p>
       </div>
       <img src="../assets/images/space-discovery-transformed.png" alt="space" class="w-[600px] h-[600px]" />
