added React JS img

--- a/web-programming/quiz-1/quiz1/html/profile.html
+++ b/web-programming/quiz-1/quiz1/html/profile.html
@@ -32,18 +32,19 @@
 
     <!-- Start of Profile -->
 
-    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-80 p-32 sm:pt-40 text-left gap-[30px]">
+    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center sm:justify-end align-middle items-center h-80 p-32 sm:pt-40 text-center gap-[30px]">
         <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80')]">
             <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
-        <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
+        <h1 class="text-gray-700 text-4xl md:text-6xl display-2 text-center sm:text-right relative">
             My
             <br class="sm:hidden" />
-            <span class="text-yellow-400 font-semibold text-6xl"> ~ Profile </span>
+            <span class="text-red-800 font-semibold text-6xl"> ~ Profile </span>
         </h1>
     </section>
     <section class="relative max-w-full h-[300px] bg-transparent justify-center align-middle z-20">
-        <img src="../assets/images/web-dev-transformed.png" alt="web-dev" class="absolute w-[600px] h-[600px] -top-60 right-6 z-20" />
+        <img src="../assets/images/web-dev-transformed.png" alt="web-dev" class="absolute w-[600px] h-[600px] -top-10 right-6 z-20" />
+        <img src="../assets/images/tightbeam-transformed.png" alt="web-dev" class="absolute w-[600px] h-[600px] -top-60 left-0 z-20" />
     </section>
     <section class="pt-40 pb-32 relative">
         <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/summarecon-bekasi.jpg')]">
