finished Profile page

--- a/web-programming/quiz-1/quiz1/html/tourist.html
+++ b/web-programming/quiz-1/quiz1/html/tourist.html
@@ -68,7 +68,7 @@
 
       <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
         <div class="text-white font-thin md:space-x-16">
-          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 sm:mr-96" href="index.html"> Log Out </a>
+          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 sm:mr-96" href="index.html"> Logout </a>
           <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="profile.html"> Profile </a>
           <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="hometown.html"> Hometown </a>
           <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 font-bold text-yellow-400" href="tourist.html"> Tourist </a>
