--- a/web-programming/quiz-1/quiz1/html/profile.html
+++ b/web-programming/quiz-1/quiz1/html/profile.html
@@ -33,30 +33,44 @@
     <!-- Start of Profile -->
 
     <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center sm:justify-end align-middle items-center h-80 p-32 sm:pt-40 text-center gap-[30px]">
-        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80')]">
+        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/react-js.jpg')]">
             <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
-        <h1 class="text-gray-700 text-4xl md:text-6xl display-2 text-center sm:text-right relative">
+        <h1 class="text-white text-4xl md:text-6xl display-2 text-center sm:text-right relative">
             My
             <br class="sm:hidden" />
-            <span class="text-red-800 font-semibold text-6xl"> ~ Profile </span>
+            <span class="text-[#5B92E5] font-semibold text-6xl"> ~ Profile </span>
         </h1>
     </section>
-    <section class="relative max-w-full h-[300px] bg-transparent justify-center align-middle z-20">
-        <img src="../assets/images/web-dev-transformed.png" alt="web-dev" class="absolute w-[600px] h-[600px] -top-10 right-6 z-20" />
-        <img src="../assets/images/tightbeam-transformed.png" alt="web-dev" class="absolute w-[600px] h-[600px] -top-60 left-0 z-20" />
+    <section class="relative max-w-full h-[300px] bg-transparent justify-center align-middle z-30">
+        <img src="../assets/images/web-dev-transformed.png" alt="web-dev" class="absolute w-[400px] h-[400px] sm:w-[600px] sm:h-[600px] bottom-0 sm:-top-10 sm:right-6 z-20" />
+        <img src="../assets/images/tightbeam-transformed.png" alt="web-dev" class="absolute hidden sm:block w-[200px] h-[200px] sm:w-[600px] sm:h-[600px] -top-60 left-0 z-20" />
+    </section>
+    <section class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
+        <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-left text-2xl space-y-8">
+            <h1> Mohammed Fachry Dwi Handoko </h1>
+            <h5>
+                5 0 2 5 2 0 1 1 5 9
+                <br />
+                <br />
+                <span class="text-yellow-400"> Informatics 2020 </span>
+            </h5>
+        </div>
     </section>
     <section class="pt-40 pb-32 relative">
-        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/summarecon-bekasi.jpg')]">
+        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/macbook.jpg')]">
             <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
         <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
-            My Hometown
-            <br class="sm:hidden" />
-            <span class="text-yellow-400 font-semibold text-6xl"> ~ Bekasi </span>
+            <span class="text-yellow-400 font-semibold text-6xl pb-20"> I am a </span>
+            <br />
+            Frontend, Mobile, Software
+            <br />
+            <span class="text-yellow-400 font-semibold text-6xl pt-20"> Engineer </span>
         </h1>
     </section>
-    <section class="max-w-full h-[250px]">
+    <section class="max-w-full h-[250px] bg-gray-900 justify-center align-middle z-20">
+        <img src="../assets/images/me-a_okay.png" alt="web-dev" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
     </section>
 
     <!-- End of Profile -->
@@ -66,7 +80,7 @@
 
       <nav class="fixed z-50 top-0 left-0 w-full h-[60px] flex align-middle justify-center py-3 bg-[#5b92e5] shadow-md">
         <div class="text-white font-thin md:space-x-16">
-          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 sm:mr-96" href="index.html"> Log Out </a>
+          <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 sm:mr-96" href="index.html"> Logout </a>
           <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200 font-bold text-yellow-400" href="profile.html"> Profile </a>
           <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="hometown.html"> Hometown </a>
           <a class="no-underline ml-[20px] text-lg hover:scale-120 hover:transition-all hover:text-blue-200" href="tourist.html"> Tourist </a>
