--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -34,7 +34,7 @@
 
     <div class="relative z-20 bg-[#5b92e5] pt-12">
         <div class="absolute inset-x-0 bottom-0">
-          <svg viewBox="0 0 224 12" fill="#f1f1f1" class="w-full -mb-1 text-white" preserveAspectRatio="none">
+          <svg viewBox="0 0 224 12" fill="#111827" class="w-full -mb-1 text-white" preserveAspectRatio="none">
             <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
           </svg>
         </div>
@@ -52,7 +52,7 @@
               This is where I live in now  :p
             </p>
             <a
-              href="/"
+              href="#footer"
               aria-label="Scroll down"
               class="flex mt-20 items-center justify-center w-10 h-10 mx-auto text-white duration-300 transform border border-gray-100 rounded-full hover:text-teal-accent-400 hover:border-teal-accent-400 hover:shadow hover:scale-150"
             >
@@ -81,10 +81,10 @@
 
     <!-- Start of Main Parallax Section -->
 
-    <section class="banner max-w-full relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center h-screen md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] mt-14">
-      <div class="text-gray-900 sm:pb-32">
+    <section class="banner max-w-full h-screen relative z-10 flex flex-col sm:flex-row justify-center align-middle items-center md:h-[300px] p-32 sm:pt-40 text-left gap-[30px] mt-14">
+      <div class="text-white sm:pb-32">
         <h2 class="font-bold text-4xl"> Take A Peek </h2>
-        <p class="pt-4 font-thin text-lg">
+        <p class="pt-4 font-thin text-lg text-gray-100">
           Born in Jakarta, lived outside my whole life as an expatriate - in
           Germany. Saudi Arabia, and Malaysia - my whole life.
         </p>
@@ -96,13 +96,23 @@
           <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
         <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
-          My Hometown
+          SUMMARECON,
           <br class="sm:hidden" />
-          <span class="text-yellow-400 font-semibold text-6xl"> ~ Bekasi </span>
+          <span class="text-yellow-400 font-semibold text-5xl md:text-6xl"> Bekasi CBD </span>
         </h1>
     </section>
-    <section class="max-w-full h-[250px]">
-    </section>
+    <section class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
+      <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-left text-2xl space-y-8">
+          <h1> Mohammed Fachry Dwi Handoko </h1>
+          <h5>
+              5 0 2 5 2 0 1 1 5 9
+              <br />
+              <br />
+              <span class="text-yellow-400"> Informatics 2020 </span>
+          </h5>
+      </div>
+      <img src="../assets/images/me-a_okay.png" alt="web-dev" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 right-0 z-20" />
+  </section>
 
     <!-- End of Main Parallax Section -->
 
