changed alt of pics of me

--- a/web-programming/quiz-1/quiz1/html/profile.html
+++ b/web-programming/quiz-1/quiz1/html/profile.html
@@ -70,7 +70,7 @@
         </h1>
     </section>
     <section class="max-w-full h-[250px] bg-gray-900 justify-center align-middle z-20">
-        <img src="../assets/images/me-a_okay.png" alt="web-dev" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
+        <img src="../assets/images/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
     </section>
 
     <!-- End of Profile -->
