--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -111,7 +111,7 @@
               <span class="text-yellow-400"> Informatics 2020 </span>
           </h5>
       </div>
-      <img src="../assets/images/me-a_okay.png" alt="web-dev" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 right-0 z-20" />
+      <img src="../assets/images/me-a_okay.png" alt="trade offer" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 right-0 z-20" />
   </section>
 
     <!-- End of Main Parallax Section -->
