finished Profile and Hometown

--- a/web-programming/quiz-1/quiz1/html/profile.html
+++ b/web-programming/quiz-1/quiz1/html/profile.html
@@ -69,7 +69,23 @@
             <span class="text-yellow-400 font-semibold text-6xl pt-20"> Engineer </span>
         </h1>
     </section>
-    <section class="max-w-full h-[250px] bg-gray-900 justify-center align-middle z-20">
+    <section class="flex flex-row w-full h-[250px] bg-gray-900 justify-center align-middle z-20">
+        <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-left text-2xl space-y-8">
+            <h5>
+                Next.js, <span class="text-blue-400"> React </span>
+            </h5>
+            <h5 class="text-yellow-400">
+                Svelte
+            </h5>
+        </div>
+        <div class="relative flex flex-col w-full h-full justify-center align-end items-end text-white text-right text-2xl space-y-8">
+            <h5 class="text-purple-400">
+                Flutter, <span class="text-purple-600"> .NET MAUI </span>
+            </h5>
+            <h5 class="text-yellow-300">
+                Figma
+            </h5>
+        </div>
         <img src="../assets/images/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
     </section>
 
