moved my pics to new directory

--- a/web-programming/quiz-1/quiz1/html/profile.html
+++ b/web-programming/quiz-1/quiz1/html/profile.html
@@ -86,7 +86,7 @@
                 Figma
             </h5>
         </div>
-        <img src="../assets/images/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
+        <img src="../assets/me/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
     </section>
 
     <!-- End of Profile -->
