changed me img to flag img in Hometown

--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -111,7 +111,7 @@
               <span class="text-yellow-400"> Informatics 2020 </span>
           </h5>
       </div>
-      <img src="../assets/me/me-trade_offer.png" alt="trade offer" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 right-0 z-20" />
+      <img src="../assets/misc/id-flag.png" alt="trade offer" class="absolute w-96 sm:w-[650px] sm:h-[500px] bottom-0 sm:right-20 z-20" />
   </section>
 
     <!-- End of Main Parallax Section -->
