added footer id to Hometown

--- a/web-programming/quiz-1/quiz1/html/hometown.html
+++ b/web-programming/quiz-1/quiz1/html/hometown.html
@@ -101,7 +101,7 @@
           <span class="text-yellow-400 font-semibold text-5xl md:text-6xl"> Bekasi CBD </span>
         </h1>
     </section>
-    <section class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
+    <section id="footer" class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
       <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-center md:text-left text-2xl space-y-8">
           <h1 class="text-base sm:text-2xl"> Mohammed Fachry Dwi Handoko </h1>
           <h5>
