added placeholder component in tourist.html

--- a/web-programming/quiz-1/quiz1/html/tourist.html
+++ b/web-programming/quiz-1/quiz1/html/tourist.html
@@ -30,39 +30,32 @@
 </head>
 <body>
 
-    <!-- Start of Login -->
+  <!-- Start of Tourist Secion -->
 
-    <div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center text-center sm:text-left sm:py-12">
-      <div class="relative py-3 sm:max-w-xl sm:mx-auto">
-        <div
-          class="absolute inset-0 bg-gradient-to-r from-blue-300 to-blue-600 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
+    <section class="pt-40 pb-32 relative">
+        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/summarecon-bekasi.jpg')]">
+          <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
         </div>
-        <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
-          <div class="max-w-md mx-auto">
-            <div>
-              <h1 class="text-2xl font-semibold"> Mohammed Fachry Dwi Handoko </h1>
-            </div>
-            <div class="divide-y divide-gray-200">
-              <div class="py-8 text-base leading-6 space-y-8 text-gray-700 sm:text-lg sm:leading-7">
-                <div class="relative">
-                  <h1 class="text-2xl font-semibold"> 5 0 2 5 2 0 1 1 5 9 </h1>
-                </div>
-                <div class="relative">
-                  <h3 class="text-xl font-thin"> Informatics 2020 </h3>
-                </div>
-                <div class="relative">
-                  <a href="profile.html">
-                    <button class="bg-blue-500 hover:scale-120 hover:transition-all hover:text-blue-200 text-gray-100 rounded-md px-6 py-2"> Get to Know Me </button>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
+          SUMMARECON,
+          <br class="sm:hidden" />
+          <span class="text-yellow-400 font-semibold text-5xl md:text-6xl"> Bekasi CBD </span>
+        </h1>
+    </section>
+    <section id="footer" class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
+      <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-center md:text-left text-2xl space-y-8">
+          <h1 class="text-base sm:text-2xl"> Mohammed Fachry Dwi Handoko </h1>
+          <h5>
+              5 0 2 5 2 0 1 1 5 9
+              <br />
+              <br />
+              <span class="text-yellow-400"> Informatics 2020 </span>
+          </h5>
       </div>
-    </div>
+      <img src="../assets/misc/id-flag.png" alt="trade offer" class="absolute w-96 sm:w-[650px] sm:h-[500px] bottom-0 sm:right-20 z-20" />
+    </section>
 
-    <!-- End of Login -->
+  <!-- End of Tourist Section -->
 
       <!-- Start of Navbar -->
 
