--- a/web-programming/quiz-1/quiz1/html/profile.html
+++ b/web-programming/quiz-1/quiz1/html/profile.html
@@ -75,15 +75,15 @@
                 Next.js, <span class="text-blue-400"> React </span>
             </h5>
             <h5 class="text-yellow-400">
-                Svelte
+                Svelte, <span class="text-sky-500"> GraphQL </span>
             </h5>
         </div>
         <div class="relative flex flex-col w-full h-full justify-center align-end items-end text-white text-right text-2xl space-y-8">
-            <h5 class="text-purple-400">
+            <h5 class="text-blue-500">
                 Flutter, <span class="text-purple-600"> .NET MAUI </span>
             </h5>
-            <h5 class="text-yellow-300">
-                Figma
+            <h5 class="text-green-400">
+                Figma, <span class="text-pink-300"> Spline </span>
             </h5>
         </div>
         <img src="../assets/me/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
