finished tourism.html

--- a/web-programming/quiz-1/quiz1/html/tourist.html
+++ b/web-programming/quiz-1/quiz1/html/tourist.html
@@ -32,28 +32,46 @@
 
   <!-- Start of Tourist Secion -->
 
-    <section class="pt-40 pb-32 relative">
-        <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/summarecon-bekasi.jpg')]">
-          <div class="absolute w-full h-screen top-0 left-0 bg-blue-600/30"></div>
+  <section class="relative p-2">
+    <div class="grid h-screen items-center antialiased text-gray-900">
+      <div>
+        <div class="grid h-screen items-center antialiased text-gray-900">
+          <div>
+            <img src="../assets/me/me-trade_offer.png" alt=" random images" class="w-[500px] object-cover object-center rounded-lg shadow-md mb-16">    
+          <div class="relative px-4 -mt-16  ">
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+              <div class="flex items-baseline">
+                <p>
+                  <span class="bg-[#111827] text-yellow-400 text-xs px-2 inline-block rounded-full  uppercase font-semibold tracking-wide">
+                    Let's Connect
+                  </span>
+                </p>
+                <div class="ml-4 text-gray-600 uppercase text-xs font-semibold tracking-wider">
+                  <a href="https://github.com/Delos-343" target="_blank" class="text-gray-600 hover:text-gray-900 transition-all">
+                    Github
+                  </a>
+                  &bull;
+                  <a href="https://www.linkedin.com/in/fachry-dwi-han/" target="_blank" class="text-gray-600 hover:text-purple-900 transition-all">
+                    LinkedIn
+                  </a>
+                </div>  
+              </div>
+              <h4 class="my-5 text-xl font-bold uppercase leading-tight">
+                There is no tourism in <span class="line-through">Ba-Sing-Se</span> Bekasi
+              </h4>
+            <p class="text-gray-700">
+              NO, BUT
+              <span class="text-gray-600"> FR THO </span>
+            </p>
+            <div class="mt-4">
+              <span class="text-gray-700 text-md font-semibold"> If there were, it's </span>
+              <span class="text-orange-600"> miniscule. </span>
+            </div>  
+          </div>
         </div>
-        <h1 class="text-gray-100 text-4xl md:text-6xl display-2 text-center relative">
-          SUMMARECON,
-          <br class="sm:hidden" />
-          <span class="text-yellow-400 font-semibold text-5xl md:text-6xl"> Bekasi CBD </span>
-        </h1>
-    </section>
-    <section id="footer" class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
-      <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-center md:text-left text-2xl space-y-8">
-          <h1 class="text-base sm:text-2xl"> Mohammed Fachry Dwi Handoko </h1>
-          <h5>
-              5 0 2 5 2 0 1 1 5 9
-              <br />
-              <br />
-              <span class="text-yellow-400"> Informatics 2020 </span>
-          </h5>
       </div>
-      <img src="../assets/misc/id-flag.png" alt="trade offer" class="absolute w-96 sm:w-[650px] sm:h-[500px] bottom-0 sm:right-20 z-20" />
-    </section>
+    </div>
+  </section>
 
   <!-- End of Tourist Section -->
 
