updated directory path for HTML files

--- a/web-programming/quiz-1/IF184504_WEBPRO(IUP)_Q1_5025201159_M-Fachry_DwiHandoko/hometown.html
+++ b/web-programming/quiz-1/IF184504_WEBPRO(IUP)_Q1_5025201159_M-Fachry_DwiHandoko/hometown.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Q-1 | 5025201159 </title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -89,7 +89,7 @@
           Germany. Saudi Arabia, and Malaysia - my whole life.
         </p>
       </div>
-      <img src="../assets/images/bekasi-pyramid.png" alt="space" class="max-w-full h-full sm:w-[600px] sm:h-[400px] relative z-10" />
+      <img src="./assets/images/bekasi-pyramid.png" alt="space" class="max-w-full h-full sm:w-[600px] sm:h-[400px] relative z-10" />
     </section>
     <section class="pt-40 pb-32 relative">
         <div class="absolute w-full h-screen top-0 left-0 bg-cover bg-center bg-no-repeat bg-fixed bg-[url('../assets/images/summarecon-bekasi.jpg')]">
@@ -111,13 +111,13 @@
               <span class="text-yellow-400"> Informatics 2020 </span>
           </h5>
       </div>
-      <img src="../assets/misc/id-flag.png" alt="trade offer" class="absolute w-96 sm:w-[650px] sm:h-[500px] bottom-0 sm:right-20 z-20" />
+      <img src="./assets/misc/id-flag.png" alt="trade offer" class="absolute w-96 sm:w-[650px] sm:h-[500px] bottom-0 sm:right-20 z-20" />
   </section>
 
     <!-- End of Main Parallax Section -->
 
 </body>
-<script src="../scripts/main.js"></script>
+<script src="./scripts/main.js"></script>
     
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
