--- a/web-programming/quiz-1/IF184504_WEBPRO(IUP)_Q1_5025201159_M-Fachry_DwiHandoko/profile.html
+++ b/web-programming/quiz-1/IF184504_WEBPRO(IUP)_Q1_5025201159_M-Fachry_DwiHandoko/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Q-1 | 5025201159 </title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -43,8 +43,8 @@
         </h1>
     </section>
     <section class="relative max-w-full h-[300px] bg-transparent justify-center align-middle z-30">
-        <img src="../assets/images/web-dev-transformed.png" alt="web-dev" class="absolute w-[400px] h-[400px] sm:w-[600px] sm:h-[600px] bottom-0 sm:-top-10 sm:right-6 z-20" />
-        <img src="../assets/images/tightbeam-transformed.png" alt="web-dev" class="absolute hidden sm:block w-[200px] h-[200px] sm:w-[600px] sm:h-[600px] -top-60 left-0 z-20" />
+        <img src="./assets/images/web-dev-transformed.png" alt="web-dev" class="absolute w-[400px] h-[400px] sm:w-[600px] sm:h-[600px] bottom-0 sm:-top-10 sm:right-6 z-20" />
+        <img src="./assets/images/tightbeam-transformed.png" alt="web-dev" class="absolute hidden sm:block w-[200px] h-[200px] sm:w-[600px] sm:h-[600px] -top-60 left-0 z-20" />
     </section>
     <section class="relative max-w-full h-[300px] bg-gray-900 justify-center align-middle z-20">
         <div class="relative flex flex-col w-full h-full justify-center align-start text-white text-left text-2xl space-y-8">
@@ -86,7 +86,7 @@
                 Figma, <span class="text-pink-300"> Spline </span>
             </h5>
         </div>
-        <img src="../assets/me/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
+        <img src="./assets/me/me-a_okay.png" alt="a-okay" class="absolute w-full sm:w-[850px] sm:h-[500px] bottom-0 z-20" />
     </section>
 
     <!-- End of Profile -->
@@ -106,5 +106,5 @@
       <!-- End of Navbar -->
 
 </body>
-<script src="../scripts/main.js"></script>
+<script src="./scripts/main.js"></script>
 </html>
