--- a/web-programming/quiz-1/IF184504_WEBPRO(IUP)_Q1_5025201159_M-Fachry_DwiHandoko/tourist.html
+++ b/web-programming/quiz-1/IF184504_WEBPRO(IUP)_Q1_5025201159_M-Fachry_DwiHandoko/tourist.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Q-1 | 5025201159 </title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -37,7 +37,7 @@
       <div>
         <div class="grid h-screen items-center antialiased text-gray-900">
           <div>
-            <img src="../assets/me/me-trade_offer.png" alt=" random images" class="w-[500px] object-cover object-center rounded-lg shadow-md mb-16">    
+            <img src="./assets/me/me-trade_offer.png" alt=" random images" class="w-[500px] object-cover object-center rounded-lg shadow-md mb-16">    
           <div class="relative px-4 -mt-16  ">
             <div class="bg-white p-6 rounded-lg shadow-lg">
               <div class="flex items-baseline">
@@ -89,5 +89,5 @@
       <!-- End of Navbar -->
 
 </body>
-<script src="../scripts/main.js"></script>
+<script src="./scripts/main.js"></script>
 </html>
